fixed header spacing bug

--- a/brookes-boarding/src/App.css
+++ b/brookes-boarding/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background: darksalmon;
+  max-width: min-content;
 }
 
 .App-logo {
@@ -21,7 +23,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: chocolate;
 }
 
 .App-link {
