--- a/brookes-boarding/src/Components/Header/Header.css
+++ b/brookes-boarding/src/Components/Header/Header.css
@@ -1,6 +1,7 @@
 .Header {
   display: flex;
   width: 100vw;
+  max-width: 100vw;
   height: 3vw;
   font-weight: 500;
   text-align: center;
@@ -9,10 +10,6 @@
   background-color: #ea82b7;
   align-items: center;
   justify-content: center;
-}
-
-.container1 {
-  display: flex;
 }
 
 .button-38 {
@@ -58,4 +55,8 @@
 
 .Button {
   margin-right: 3%;
+}
+
+.container {
+  background: red;
 }
